# webcli

./: CLAUDE.md  PLAN.md  PyPI-Recovery-Codes-lonexreb-2026-03-13T00_48_21.460742.txt  README.md  RESEARCH-DEEP-DIVE.md  RESEARCH-EXPERIMENT.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/site2cli/: __init__.py  cli.py  config.py  output_filter.py
src/site2cli/browser/: __init__.py  a11y.py  cookie_banner.py  detectors.py  retry.py  wait.py
src/site2cli/discovery/: capture.py  client_generator.py
src/site2cli/generators/: agent_config.py
src/site2cli/tiers/: browser_explorer.py
src/webcli/: cli.py  config.py  models.py  registry.py  router.py
src/webcli/auth/: manager.py
src/webcli/community/: registry.py
src/webcli/discovery/: analyzer.py  capture.py  client_generator.py  spec_generator.py
src/webcli/generators/: cli_gen.py  mcp_gen.py
src/webcli/health/: monitor.py  self_heal.py
src/webcli/tiers/: browser_explorer.py  cached_workflow.py  direct_api.py
tests/: test_a11y.py  test_agent_config.py  test_cookie_banner.py  test_detectors.py  test_integration_live.py  test_integration_pipeline.py  test_models.py  test_output_filter.py  test_registry.py  test_retry.py  test_spec_generator.py  test_tier_promotion.py  test_wait_conditions.py
