[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "site2cli"
version = "0.2.5"
description = "Turn any website into a CLI/API for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "keyring>=25.0.0",
    "openapi-spec-validator>=0.7.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40.0",
    "browser-cookie3>=0.19.0",
]
llm = [
    "anthropic>=0.40.0",
]
mcp = [
    "mcp>=1.0.0",
]
cookies = [
    "browser-cookie3>=0.19.0",
]
all = [
    "site2cli[browser,llm,mcp]",
]
dev = [
    "site2cli[all]",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/lonexreb/site2cli"
Repository = "https://github.com/lonexreb/site2cli"
Issues = "https://github.com/lonexreb/site2cli/issues"

[project.scripts]
site2cli = "site2cli.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that make real network requests (deselect with '-m not live')",
]

[tool.hatch.build.targets.wheel]
packages = ["src/site2cli"]

[tool.hatch.build.targets.sdist]
include = ["src/site2cli"]
